# mb-aws-helper

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  aws_tool.py  init.sh  mb-aws-helper  package.json  pyproject.toml
.github/workflows/: release.yml
aws_helper/: __init__.py  constants.py  main.py  selection.py  validators.py
aws_helper/aws/: auth.py  cache.py  discovery.py  logs.py
aws_helper/cli/: parser.py
aws_helper/commands/: artifactory.py  common.py  gitlab.py
aws_helper/interactive/: menu.py
aws_helper/output/: renderers.py
aws_helper/ssm/: session.py
aws_helper/utils/: common.py  logging_utils.py
mb_aws_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: build-release.sh  upload-r2.sh
