[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mb-aws-helper"
version = "1.0.0"
description = "AWS helper for Artifactory and GitLab operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "botocore",
]

[project.scripts]
mb-aws-helper = "aws_helper.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["aws_helper*"]